fix gallery  modal display on safari

--- a/src/Gallery/style.less
+++ b/src/Gallery/style.less
@@ -69,6 +69,7 @@
     cursor: pointer;
     text-decoration: underline;
     color: @primary-color;
+    align-items: center;
     &__icon {
       margin-left: 4px;
     }
